software/css/software.css
/* ... */
.lf-security-promo {
  background: #E6B900;
  padding: 20px;
  color: white;
  border-radius: 4px;
  margin-top: 30px; }

.lf-security-promo h2 {
  color: white;
  margin: 10px 0 15px;
  font-size: 25px;
  font-weight: 400; }

@media (max-width: 767px) {
  .lf-security-promo {
    text-align: center; }
  .lf-security-promo h2 {
    text-align: center;
    margin-top: 20px; } }

a.security-promo-btn {
  background: #2C84DC;
  color: white;
  text-transform: uppercase;
  border-radius: 4px;
  padding: 7px 20px;
  display: inline-block;
  margin-top: 10px; }

a.security-promo-btn:hover, a.security-promo-btn:focus {
  background: #1753AA;
  text-decoration: none; }

.project-category h2 {
  font-size: 1.2em;
  border-bottom: 1px solid #D9D9D9;
  padding-bottom: 8px;
  margin-top: 70px;
  text-transform: uppercase; }

.no-gutter > [class*='col-'] {
  padding-right: 0;
  padding-left: 0; }

.project-tile {
  border: 1px solid #A6A6A6;
  margin-bottom: 15px; }
  .project-tile h3 {
    padding-top: 160px;
    color: black;
    font-weight: 800;
    margin-bottom: 0px; }
  .project-tile strong {
    font-weight: normal;
    color: black; }

.project-stat-bar {
  border-top: 1px solid #D9D9D9;
  background-color: #F5F5F5;
  color: #4C4C4C; }
  .project-stat-bar .small-type {
    font-size: 0.6em; }

.project-stat {
  font-size: 1.4em;
  border-right: 1px solid #D9D9D9;
  width: 30%;
  display: inline-block;
  padding-bottom: 7px;
  padding-top: 7px; }

.project-stat:last-child {
  border-right: none; }

.project-stat-label {
  font-size: 0.6em;
  color: #8C8C8C; }

.project-stat-label {
  text-transform: uppercase; }

.project-category-tile {
  padding-top: 20px;
  text-align: center;
  background: white;
  border: 1px solid #D3DEE9;
  box-shadow: 1px 1px 3px 0px rgba(51, 51, 51, 0.12);
  border-radius: 4px;
  margin-bottom: 20px;
  display: block;
  position: relative; }

.number-of-projects {
  border-top: 1px solid #D3DEE9;
  background-color: #EDFDFF;
  margin: 0px;
  margin-top: 10px;
  padding: 10px; }

.project-category-list-background {
  padding: 20px 0px; }

.project-short-description {
  min-height: 3em;
  color: #1B92D4;
  font-size: 1.2em;
  margin-top: 3px; }

.optional-services-table td {
  text-align: left; }

.optional-services-table {
  margin-top: 40px; }

h3.header-center {
  text-align: center;
  padding-bottom: 30px; }

.workloads-section ul {
  margin: 0px;
  padding: 0px; }

.workloads-section li {
  border: 1px solid #D3DEE9;
  box-shadow: 1px 1px 3px 0px rgba(51, 51, 51, 0.12);
  border-radius: 4px;  
  font-weight: bold;
  list-style: none;
  margin: 10px;
  padding: 0.5em;
  display: block;
  float: left;
  width: 250px;
  text-align: left;
 }

 .workloads-section li a {
   display: block;
 }

  .category-icon {
    text-align: center;
  }

  .workloads-icon {
    width: 70px;
    float: left;
    background-color: #EDFDFF;
    margin-right: 10px;
  }
  
  .starter-pack ul {
    margin: 0px;
    padding: 0px; }
  
  .starter-pack li {
  	text-align: center;
    border: 1px solid #D3DEE9;
    box-shadow: 1px 1px 3px 0px rgba(51, 51, 51, 0.12);
    border-radius: 4px;  
    font-weight: bold;
    list-style: none;
    margin: 10px;
    padding: 0.5em;
    display: block;
    float: left;
    width: 23%;
    height: 215px;
    min-width: 130px;
   }
   
   .starter-pack li a:hover {
     text-decoration: none;
   }
   
  .workloads-section {
  	padding-top: 30px;
  }
   
  .starter-pack li h4 {
  	padding-top: 120px;
  	background: no-repeat center center;
  	color: black;
  	font-weight: bold;
  	text-transform: uppercase;
  }

.starter-pack li.neutron h4 {
	background-image: url(/software/images/mascots/neutron.png);
}  

.starter-pack li.cinder h4 {
	background-image: url(/software/images/mascots/cinder.png);
}  
  
.starter-pack li.glance h4 {
	background-image: url(/software/images/mascots/glance.png);
}  
  
.starter-pack li.nova h4 {
	background-image: url(/software/images/mascots/nova.png);
}  

.starter-pack li.keystone h4 {
	background-image: url(/software/images/mascots/keystone.png);
}    

.starter-pack li.swift h4 {
	background-image: url(/software/images/mascots/swift.png);
}

th.maturity, td.maturity {
  color:  #1F78BC!important;
	width: 45px;
}

.component-link {
  margin-right: 10px;
}

/* - NEW Software Page - 2018-01 - */

img.header-bullet {
  float: left;
  width: 31px;
  height: 33px;
}

h3.has-bullet {
  position: relative;
  top: -7px;
  left: 16px;
}

h3.is-upprcs {
  text-transform: uppercase;
  font-weight: 900;
}

 .fa-chevron-right {
  position: relative;
  top: 1px;
  left: 4px;
}

.is-centered {
  text-align: center;
}

h5.software-card-title {
  color: #fff;
  background-color: #30739C;
  padding: 20px 10px;
  height: 50px;
  vertical-align: middle;
  font-weight: 600;
  letter-spacing: 1px;
}

.software-card-body {
  color: #333333;
  background-color: #EDF2F8;
}

p.software-card-text,
a.software-card-link {
  font-size: small;
  margin-bottom: 0;
}

p.software-card-text {
  padding: 16px 10px;
  min-height: 95px;  
}

a.software-card-link {
  display: inline-block;
  padding: 0px 10px 16px;
  font-weight: 600;
}

img.card-header-icon {
  float: left;
  height: 25px;
  width: 25px;
  position: relative;
  top: -6px;
  margin-right: 10px;
}

p.minheight100 {
  min-height: 100px;
}

a.software-link-button {
  color: #fff;
  background-color: #2B4D68;
  padding: 5px 25px;
}

.fa-chevron-right.fa-inverse {
  color: #2B4D68;
  position: relative;
  top: 0px;
  left: 1px;
 }

